more setup of blog page and basic seo mechanism setup.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
+const title = "About Me";
+const description = "A page that tells you all about Rohan Nelson";
 ---
 
-<Layout title="About">
-    <h1>About Me!</h1>
+<Layout title={title} description={description}>
     <p>Here's some random things about me!</p>
 </Layout>
