--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,8 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
+const title = "Contact Me";
+const description = "How to contact Rohan Nelson";
 ---
 
-<Layout title="Contact">
-    <h1>Contact Me</h1>
+<Layout title={title} description={description}>
     <p>Want to get in touch? Here's how!</p>
 </Layout>
