--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,9 +3,12 @@ import Header from "../components/Header.astro";
 
 export interface Props {
 	title: string;
+	description: string;
 }
 
-const { title } = Astro.props;
+const { title, description, frontmatter } = Astro.props;
+const pageTitle = title ?? frontmatter.title;
+const pageDescription = description ?? frontmatter.description;
 ---
 
 <!DOCTYPE html>
@@ -15,16 +18,21 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<meta name="description" content={pageDescription} />
+		<title>{pageTitle} - rohannelson.com</title>
 	</head>
 	<body>
 		<Header />
 		<main>
+			<h1>{pageTitle}</h1>
 			<slot />
 		</main>
 	</body>
 </html>
 <style is:global>
+	* {
+		box-sizing: border-box;
+	}
 	:root {
 		--accent: 124, 58, 237;
 		--accent-gradient: linear-gradient(
