Basic layout/structure complete? (ready for initial content I think...)

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -13,5 +13,10 @@ const { frontmatter } = Astro.props;
     img {
         min-width: 200px;
         height: auto;
+        float: right;
+        padding: 10px 10px 0 10px;
+    }
+    div {
+        max-width: 750px;
     }
 </style>
