--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -36,7 +36,11 @@ const allBlogs = await Astro.glob("./*.mdx");
         margin: 1rem 0;
     }
     img {
-        height: 75px;
-        width: 75px;
+        height: 80px;
+        width: auto;
+        float: right;
+    }
+    h3 {
+        margin-top: 0px;
     }
 </style>
