--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,11 +15,18 @@
 </header>
 
 <style>
+    :root {
+        --header-height: 3.5rem;
+    }
     header {
         display: flex;
         width: 100%;
         padding: 1rem;
         border-bottom: 1px solid gray;
+        background-color: #f1f1f1;
+        position: fixed;
+        top: 0;
+        height: var(--header-height);
     }
     nav {
         width: 100%;
