--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,8 +24,10 @@ const pageDescription = description ?? frontmatter.description;
 	<body>
 		<Header />
 		<main>
-			<h1>{pageTitle}</h1>
-			<slot />
+			<div class="container">
+				<h1>{pageTitle}</h1>
+				<slot />
+			</div>
 		</main>
 	</body>
 </html>
@@ -52,10 +54,22 @@ const pageDescription = description ?? frontmatter.description;
 	}
 </style>
 <style>
+	div.container {
+		max-width: 750px;
+		justify-content: center;
+		margin: 0 auto;
+		background-color: #f1f1f1;
+		padding: 2rem 2rem 2rem 2rem;
+		min-height: calc(100vh - var(--header-height));
+	}
 	body {
 		margin: 0;
 	}
 	main {
-		padding: 0 2rem 2rem 2rem;
+		margin-top: var(--header-height);
+		padding: 0 2rem 0 2rem;
+	}
+	h1 {
+		margin-top: 0;
 	}
 </style>
