First content update - home page!

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,37 +5,29 @@ const description = "A description for my home page";
 ---
 
 <Layout title={title} description={description}>
-    <img src="/blog.svg" />
+    <img src="/portrait.jpg" />
+    <p>Hi, I'm Rohan, and this is my first personal website and&nbsp;blog!</p>
     <p>
-        This is a website where I can publish random things! The standard Lorem
-        Ipsum passage, used since the 1500s "Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum." Section 1.10.32 of "de Finibus Bonorum et Malorum", written by
-        Cicero in 45 BC "Sed ut perspiciatis unde omnis iste natus error sit
-        voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque
-        ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-        dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-        aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
-        qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
-        dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia
-        non numquam eius modi tempora incidunt ut labore et dolore magnam
-        aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-        exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea
-        commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea
-        voluptate velit esse quam nihil molestiae consequatur, vel illum qui
-        dolorem eum fugiat quo voluptas nulla pariatur?"
+        I'm hoping to share some of my thoughts here &ndash; some old and some
+        new. However, as I'm not a big reader myself (and I sometimes feel
+        overwhelmed by how much content is out there), I'm planning to only
+        publish things that I think are worth reading. This means it should be
+        pretty easy to keep up with if you're interested in me or
+        my&nbsp;thoughts :).
     </p>
+    <p>
+        I've also been learning web development for fun since early 2022, so
+        this space is an opportunity for me to play around and try
+        some&nbsp;things. I'm hoping to add different features over time (e.g.
+        an RSS feed so you can subscribe to updates if you're so inclined).
+    </p>
+    <p>I hope you enjoy my website! :)</p>
 </Layout>
 <style>
     img {
         width: 200px;
         height: auto;
         float: right;
-        margin: 2rem;
+        margin: 0 0 1rem 2rem;
     }
 </style>
