--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,7 @@
         display: flex;
         width: 100%;
         padding: 1rem;
-        border-bottom: 1px solid gray;
+        border-bottom: 2px dotted white;
         background-color: #f1f1f1;
         position: fixed;
         top: 0;
