--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,6 +26,7 @@ const description = "A description for my home page";
 <style>
     img {
         width: 200px;
+        max-width: 33vw;
         height: auto;
         float: right;
         margin: 0 0 1rem 2rem;
