various minor changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,25 +10,28 @@ const description = "A description for my home page";
     <p>
         I'm hoping to share some of my thoughts here &ndash; some old and some
         new. However, as I'm not a big reader myself (and I sometimes feel
-        overwhelmed by how much content is out there), I'm planning to only
-        publish things that I think are worth reading. This means it should be
-        pretty easy to keep up with if you're interested in me or
-        my&nbsp;thoughts :).
+        overwhelmed by how much content there is out there), I'm planning to
+        only publish things that I think are particularly worth reading. This
+        means it should be pretty easy to keep up with if you're interested in
+        me or my&nbsp;thoughts.
     </p>
     <p>
         I've also been learning web development for fun since early 2022, so
-        this space is an opportunity for me to play around and try
-        some&nbsp;things. I'm hoping to add different features over time (e.g.
-        an RSS feed so you can subscribe to updates if you're so inclined).
+        this space is an opportunity for me to play around and try some things.
+        I'm hoping to add different features over time (e.g. an RSS feed so you
+        can subscribe to updates if you're so&nbsp;inclined).
     </p>
-    <p>I hope you enjoy my website! :)</p>
+    <p>
+        It's currently under construction, so please bear with the various
+        unfinished&nbsp;bits.
+    </p>
 </Layout>
 <style>
     img {
         width: 200px;
-        max-width: 33vw;
+        max-width: 30vw;
         height: auto;
         float: right;
-        margin: 0 0 1rem 2rem;
+        margin: 0 0 0.5rem 1rem;
     }
 </style>
