random changes (mostly styling) plus a little accessibility

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,26 +1,32 @@
 ---
 import Layout from "../layouts/Layout.astro";
-const title = "Welcome to My Website!";
+const title = "Welcome!";
 const description = "A description for my home page";
 ---
 
 <Layout title={title} description={description}>
     <img src="/portrait.jpg" />
-    <p>Hi, I'm Rohan, and this is my first personal website and&nbsp;blog!</p>
+    <p class="focus">
+        Hi, I'm Rohan, and this is my first personal website and&nbsp;blog!
+    </p>
+    <h2>What's Here?</h2>
+    <h3>A Blog</h3>
     <p>
         I'm hoping to share some of my thoughts here &ndash; some old and some
-        new. However, as I'm not a big reader myself (and I sometimes feel
+        new. But as I'm not a big reader myself (and seeing how I sometimes feel
         overwhelmed by how much content there is out there), I'm planning to
-        only publish things that I think are particularly worth reading. This
-        means it should be pretty easy to keep up with if you're interested in
-        me or my&nbsp;thoughts.
+        only publish things that I think are really worth reading. This means it
+        should be pretty easy to keep up with if you're interested in me or
+        my&nbsp;thoughts!
     </p>
+    <h3>Web Experiments</h3>
     <p>
         I've also been learning web development for fun since early 2022, so
         this space is an opportunity for me to play around and try some things.
         I'm hoping to add different features over time (e.g. an RSS feed so you
         can subscribe to updates if you're so&nbsp;inclined).
     </p>
+    <h3>Under Construction</h3>
     <p>
         It's currently under construction, so please bear with the various
         unfinished&nbsp;bits.
