--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,17 +16,22 @@
 
 <style>
     :root {
-        --header-height: 3.5rem;
+        --header-height: 3.75rem;
     }
     header {
         display: flex;
         width: 100%;
         padding: 1rem;
         border-bottom: 2px dotted white;
-        background-color: #f1f1f1;
+        background-color: var(--theme-background);
         position: fixed;
         top: 0;
         height: var(--header-height);
+    }
+    div > a {
+        padding: 0.75rem;
+        background: var(--accent-gradient);
+        border-radius: 100%;
     }
     nav {
         width: 100%;
@@ -38,9 +43,24 @@
     }
     li {
         list-style: none;
-        padding: 0 1rem;
+        padding: 0 0.5rem;
     }
     a {
         text-decoration: none;
+        color: black;
+        padding: 0.5rem 1rem;
+        border-radius: 5px;
+        font-size: 1.1rem;
+        font-weight: 500;
+    }
+    a:focus,
+    a:hover {
+        outline: solid 1px black;
+        font-weight: 600;
+    }
+    div > a:focus,
+    div > a:hover {
+        outline: solid 1px black;
+        transition: 0.25s;
     }
 </style>
