--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,12 +37,9 @@ const pageDescription = description ?? frontmatter.description;
 	}
 	:root {
 		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			#da62c4 30%,
-			white 60%
-		);
+		--accent-gradient: linear-gradient(110deg, #a3c9ca, #cbf6ff);
+		--theme-color: #a3c9ca;
+		--theme-background: #e1d9d6;
 	}
 	html {
 		font-family: system-ui, sans-serif;
@@ -52,13 +49,27 @@ const pageDescription = description ?? frontmatter.description;
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
 			DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
 	}
+	p,
+	a {
+		font-size: 17px;
+	}
+	h2,
+	h3,
+	h4 {
+		margin-bottom: 0.5rem;
+	}
+	h1 + h2,
+	h2 + h3,
+	h3 + h4 {
+		margin-top: 0px;
+	}
 </style>
 <style>
 	div.container {
 		max-width: 700px;
 		justify-content: center;
 		margin: 0 auto;
-		background-color: #f1f1f1;
+		background-color: var(--theme-background);
 		padding: 2rem 2rem 2rem 2rem;
 		min-height: calc(100vh - var(--header-height));
 	}
