--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -4,7 +4,7 @@ const { frontmatter } = Astro.props;
 ---
 
 <Layout title={frontmatter.title} description={frontmatter.description}>
-    <img src={frontmatter.image ?? "/blog.svg"} />
+    <img src={frontmatter.image ?? "/img/blog.svg"} />
     <div>
         <slot />
     </div>
