--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ const description = "A description for my home page";
 ---
 
 <Layout title={title} description={description}>
-    <img src="/portrait.jpg" />
+    <img src="/img/portrait.jpg" />
     <p class="focus">
         Hi, I'm Rohan, and this is my first personal website and&nbsp;blog!
     </p>
