switched from border to background behind header

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -87,7 +87,7 @@ const pageDescription = description ?? frontmatter.description;
 		justify-content: center;
 		margin: 0 auto;
 		background-color: #f1f1f1;
-		padding: 2rem 2rem 2rem 2rem;
+		padding: 0 2rem 2rem 2rem;
 		min-height: calc(100vh - var(--header-height));
 	}
 	body {
@@ -97,6 +97,8 @@ const pageDescription = description ?? frontmatter.description;
 		margin-top: var(--header-height);
 	}
 	h1 {
-		margin-top: 0;
+		background-color: #dfdfdf;
+		margin: 0 -2rem 2rem -2rem;
+		padding: 0.75rem 2rem 1.5rem 2rem;
 	}
 </style>
