--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@
 
 <style>
     :root {
-        --header-height: 5rem;
+        --header-height: 5.5rem;
     }
     header {
         display: flex;
@@ -37,7 +37,7 @@
         height: var(--header-height);
         display: flex;
         justify-content: flex-end;
-        border-bottom: dotted 1px black;
+        border-bottom: solid 1px #dfdfdf;
     }
     div.wrapper > a {
         padding: 0.75rem;
