--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,5 +39,6 @@ const description = "A description for my home page";
         height: auto;
         float: right;
         margin: 0 0 0.5rem 1rem;
+        border-radius: 4px;
     }
 </style>
