--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,4 +6,31 @@ const description = "A page that tells you all about Rohan Nelson";
 
 <Layout title={title} description={description}>
     <p>Here's some random things about me!</p>
+    <ul>
+        <li>
+            <strong
+                >I graduated from a Bachelor of Jazz Performance in 2011.</strong
+            > My first love is electric bass, but I can also play double bass, piano,
+            and guitar (to varying levels of competency).
+        </li>
+        <li>
+            <strong
+                >I feel called to a teaching ministry within the church.</strong
+            > I've never been 100% sure what following this through looks like in
+            practice, but so far I've engaged in volunteer ministry, and held two
+            associate pastor roles where I've been working with youth or children
+            (amongst other duties).
+        </li>
+        <li>
+            <strong>I graduated from a Master of Divinity in 2018.</strong> I've
+            also had one journal article published so far, and would be keen to do
+            a PhD when the time is right.
+        </li>
+        <li>
+            <strong>I love languages!</strong> I've really enjoyed learning biblical
+            Greek and Hebrew, and have tried to keep my knowledge of these languages
+            alive. I've also completed half a Latin text-book, dabbled in German,
+            and can say "I am a coconut" in about ten different languages :P.
+        </li>
+    </ul>
 </Layout>
