--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,8 @@ const description = "A description for my home page";
 <Layout title={title} description={description}>
     <img src="/img/portrait.jpg" />
     <p class="focus">
-        Hi, I'm Rohan, and this is my first personal website and&nbsp;blog!
+        Hi, I'm Rohan, and this is my first attempt at a personal website
+        and&nbsp;blog!
     </p>
     <h2>What's Here?</h2>
     <h3>A Blog</h3>
@@ -22,14 +23,14 @@ const description = "A description for my home page";
     <h3>Web Experiments</h3>
     <p>
         I've also been learning web development for fun since early 2022, so
-        this space is an opportunity for me to play around and try some things.
-        I'm hoping to add different features over time (e.g. an RSS feed so you
-        can subscribe to updates if you're so&nbsp;inclined).
+        this is an opportunity for me to play around and try some things. I'm
+        hoping to add different features over time (e.g. an RSS feed so you can
+        subscribe to updates if you're so&nbsp;inclined).
     </p>
     <h3>Under Construction</h3>
     <p>
-        It's currently under construction, so please bear with the various
-        unfinished&nbsp;bits.
+        This site is currently under construction, so please bear with the
+        various unfinished&nbsp;bits.
     </p>
 </Layout>
 <style>
