Slight edits to home content, aligned nav ul to the right a bit better (with negative margin), and finished About Page content (for now)

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -80,6 +80,9 @@ const pageDescription = description ?? frontmatter.description;
 	h3 + h4 {
 		margin-top: 0px;
 	}
+	li {
+		margin-bottom: 0.5rem;
+	}
 </style>
 <style>
 	div.container {
