--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ const description = "A description for my home page";
         and&nbsp;blog!
     </p>
     <h2>What's Here?</h2>
-    <h3>A Blog</h3>
+    <h3>A Blog...</h3>
     <p>
         I'm hoping to share some of my thoughts here &ndash; some old and some
         new. But as I'm not a big reader myself (and seeing how I sometimes feel
