--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -52,6 +52,7 @@
         justify-content: flex-end;
         align-items: center;
         margin: 0;
+        margin-right: -1rem;
     }
     li {
         list-style: none;
