Added email address to contact page (trusting Cloudflare ScrapeShield...)

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,5 +5,9 @@ const description = "How to contact Rohan Nelson";
 ---
 
 <Layout title={title} description={description}>
-    <p>Want to get in touch? Here's how!</p>
+    <p>
+        Want to get in touch? I'd love to hear from you at <a
+            href="mailto:hello@rohannelson.com">hello@rohannelson.com</a
+        >!
+    </p>
 </Layout>
