A few minor content tweaks (and added two new frontmatter types to the dummy blog posts)

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,8 +16,9 @@ const description = "A page that tells you all about Rohan Nelson";
         </li>
         <li>
             <strong
-                >I feel called to a teaching ministry within the church.</strong
-            > I've never been 100% sure what following this through looks like in
+                >I'm a Christian, and I feel called to a teaching ministry
+                within the church.</strong
+            > I've never been 100% sure what following this calling looks like in
             practice, but so far I've engaged in volunteer ministry and held two
             paid pastoral roles where I've been working with youth or children (amongst
             other things).
