--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -11,10 +11,11 @@ const { frontmatter } = Astro.props;
 </Layout>
 <style>
     img {
-        min-width: 200px;
+        width: 200px;
+        max-width: 30vw;
         height: auto;
         float: right;
-        padding: 10px 10px 0 10px;
+        padding: 10px 10px 5px 10px;
     }
     div {
         max-width: 750px;
