initial blog navigation added

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,23 +1,63 @@
 ---
 import Layout from "./Layout.astro";
 const { frontmatter } = Astro.props;
+const allBlogs = await Astro.glob("../pages/blog/*.mdx");
+let previousBlogObj = {};
+let nextBlogObj = {};
+allBlogs.forEach((blog, i) => {
+    if (frontmatter.title === blog.frontmatter.title) {
+        previousBlogObj = allBlogs[i - 1];
+        nextBlogObj = allBlogs[i + 1];
+    }
+});
+let previousBlogHeading = "";
+let previousBlogTitle = "";
+if (previousBlogObj) {
+    previousBlogHeading = "Previous Blog";
+    previousBlogTitle = previousBlogObj.frontmatter.title;
+}
+let nextBlogHeading = "";
+let nextBlogTitle = "";
+if (nextBlogObj) {
+    nextBlogHeading = "Next Blog";
+    nextBlogTitle = nextBlogObj.frontmatter.title;
+}
 ---
 
 <Layout title={frontmatter.title} description={frontmatter.description}>
     <img src={frontmatter.image ?? "/img/blog.svg"} />
-    <div>
-        <slot />
-    </div>
+    <slot />
+    <nav class="blogNavigation">
+        <a class="previousBlog" href={previousBlogObj?.url}>
+            <h4>{previousBlogHeading}</h4>
+            {previousBlogTitle}
+        </a>
+        <a class="nextBlog" href={nextBlogObj?.url}>
+            <h4>
+                {nextBlogHeading}
+            </h4>
+            {nextBlogTitle}
+        </a>
+    </nav>
+    <style>
+        img {
+            width: 200px;
+            max-width: 30vw;
+            height: auto;
+            float: right;
+            padding: 10px 10px 5px 10px;
+        }
+        nav.blogNavigation {
+            display: flex;
+        }
+        a.previousBlog {
+            margin-right: auto;
+        }
+        a.nextBlog {
+            margin-left: auto;
+        }
+        a h4 {
+            text-decoration: none;
+        }
+    </style>
 </Layout>
-<style>
-    img {
-        width: 200px;
-        max-width: 30vw;
-        height: auto;
-        float: right;
-        padding: 10px 10px 5px 10px;
-    }
-    div {
-        max-width: 750px;
-    }
-</style>
