--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,24 @@ const pageDescription = description ?? frontmatter.description;
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- Google tag (gtag.js) -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-MMFSDDTRB0"
+		></script>
+		<script>
+			//@ts-ignore
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				//@ts-ignore
+				dataLayer.push(arguments);
+			}
+			//@ts-ignore
+			gtag("js", new Date());
+			//@ts-ignore
+			gtag("config", "G-MMFSDDTRB0");
+		</script>
+
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link
