--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import Header from "../components/Header.astro";
-
+import GoogleAnalytics from "../components/GoogleAnalytics.astro";
 export interface Props {
 	title: string;
 	description: string;
@@ -14,24 +14,7 @@ const pageDescription = description ?? frontmatter.description;
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Google tag (gtag.js) -->
-		<script
-			async
-			src="https://www.googletagmanager.com/gtag/js?id=G-MMFSDDTRB0"
-		></script>
-		<script>
-			//@ts-ignore
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				//@ts-ignore
-				dataLayer.push(arguments);
-			}
-			//@ts-ignore
-			gtag("js", new Date());
-			//@ts-ignore
-			gtag("config", "G-MMFSDDTRB0");
-		</script>
-
+		<GoogleAnalytics />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link
@@ -64,62 +47,62 @@ const pageDescription = description ?? frontmatter.description;
 				<slot />
 			</div>
 		</main>
-	</body>
+	</body><style is:global>
+		* {
+			box-sizing: border-box;
+		}
+		:root {
+			--accent: 124, 58, 237;
+			--accent-gradient: linear-gradient(110deg, #a3c9ca, #cbf6ff);
+			--theme-color: #a3c9ca;
+			--theme-background: #f1f1f1 /*#e1d9d6*/;
+		}
+		html {
+			font-family: system-ui, sans-serif;
+			background-color: var(--theme-background);
+		}
+		code {
+			font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
+				DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New,
+				monospace;
+		}
+		p,
+		a {
+			font-size: 17px;
+		}
+		h2,
+		h3,
+		h4 {
+			margin-bottom: 0.5rem;
+		}
+		h1 + h2,
+		h2 + h3,
+		h3 + h4 {
+			margin-top: 0px;
+		}
+		li {
+			margin-bottom: 0.5rem;
+		}
+	</style>
+	<style>
+		div.container {
+			max-width: 700px;
+			justify-content: center;
+			margin: 0 auto;
+			background-color: #f1f1f1;
+			padding: 0 2rem 2rem 2rem;
+			min-height: calc(100vh - var(--header-height));
+		}
+		body {
+			margin: 0;
+		}
+		main {
+			margin-top: var(--header-height);
+		}
+		h1 {
+			background-color: #dfdfdf;
+			margin: 0 -2rem 2rem -2rem;
+			padding: 0.75rem 2rem 1.5rem 2rem;
+		}
+	</style>
 </html>
-<style is:global>
-	* {
-		box-sizing: border-box;
-	}
-	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(110deg, #a3c9ca, #cbf6ff);
-		--theme-color: #a3c9ca;
-		--theme-background: #f1f1f1 /*#e1d9d6*/;
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background-color: var(--theme-background);
-	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
-			DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
-	}
-	p,
-	a {
-		font-size: 17px;
-	}
-	h2,
-	h3,
-	h4 {
-		margin-bottom: 0.5rem;
-	}
-	h1 + h2,
-	h2 + h3,
-	h3 + h4 {
-		margin-top: 0px;
-	}
-	li {
-		margin-bottom: 0.5rem;
-	}
-</style>
-<style>
-	div.container {
-		max-width: 700px;
-		justify-content: center;
-		margin: 0 auto;
-		background-color: #f1f1f1;
-		padding: 0 2rem 2rem 2rem;
-		min-height: calc(100vh - var(--header-height));
-	}
-	body {
-		margin: 0;
-	}
-	main {
-		margin-top: var(--header-height);
-	}
-	h1 {
-		background-color: #dfdfdf;
-		margin: 0 -2rem 2rem -2rem;
-		padding: 0.75rem 2rem 1.5rem 2rem;
-	}
-</style>
