--- a/src/components/NavCard.astro
+++ b/src/components/NavCard.astro
@@ -27,6 +27,9 @@ const { cardURL, cardHeading, cardDescription, cardImage } = Astro.props;
         border-radius: 4px;
         margin: 1rem 0;
     }
+    li:hover, li:focus {
+        transform: scale(102%);
+    }
     img {
         height: 80px;
         width: auto;
