upgraded tag component to metadata component - need to figure out dates and differentiation between tag spacing and other list items.

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "./Layout.astro";
 import NavCard from "../components/NavCard.astro";
-import TagList from "../components/TagList.astro";
+import Metadata from "../components/Metadata.astro";
 const { frontmatter } = Astro.props;
 const allBlogs = await Astro.glob("../pages/blog/*.mdx");
 let previousBlogObj: any = {};
@@ -12,13 +12,10 @@ allBlogs.forEach((blog, i) => {
         nextBlogObj = allBlogs[i + 1];
     }
 });
-const capitalise = (str) => {
-    return str.charAt(0).toUpperCase() + str.slice(1)
-}
 ---
 
-<Layout title={capitalise(frontmatter.title)} description={frontmatter.description}>
-    <TagList tags={frontmatter.tags} />
+<Layout title={frontmatter.title} description={frontmatter.description}>
+    <Metadata frontmatter={frontmatter} />
     <img src={frontmatter.image ?? "/img/blog.svg"} />
     <slot />
     <hr />
