Added intersection observer to header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,10 +15,12 @@
         </nav>
     </div>
 </header>
-<div class="placeholder"></div>
+<div class="header-trigger"></div>
 <style>
     :root {
         --header-height: 5.5rem;
+        --font-size: 16px;
+        --transition-speed: 0.25s;
     }
     header {
         display: flex;
@@ -28,18 +30,21 @@
         top: 0;
         height: var(--header-height);
         justify-content: center;
+        font-size: var(--font-size);
+        transition: var(--transition-speed);
     }
     div.container {
         max-width: 700px;
-        padding: 2rem 2rem 0 2rem;
+        padding: 2em 2rem 0 2rem;
         width: 100%;
         height: var(--header-height);
         display: flex;
         justify-content: flex-end;
         border-bottom: solid 1px #dfdfdf;
+        transition: var(--transition-speed);
     }
     div.wrapper > a {
-        padding: 0.75rem;
+        padding: 0.75em;
         background: var(--accent-gradient);
         border-radius: 100%;
     }
@@ -74,10 +79,11 @@
     div.wrapper > a:focus,
     div.wrapper > a:hover {
         outline: solid 1px black;
-        transition: 0.25s;
+        transition: var(--transition-speed);
     }
-    div.placeholder {
+    div.header-trigger {
         height: var(--header-height);
+        transition: var(--transition-speed);
     }
     @media (max-width: 400px) {
         li {
@@ -85,3 +91,28 @@
         }
     }
 </style>
+<script>
+    const html = document.documentElement;
+    const headerTrigger = document.querySelector(".header-trigger");
+    const headerHeightInit = html.style.getPropertyValue("--header-height");
+    const fontSizeInit = html.style.getPropertyValue("--font-size");
+    let options = {
+        root: null,
+        rootMargin: "0px",
+        threshold: 1,
+    };
+    const obsCallback = (entries) => {
+        entries.forEach((entry) => {
+            if (!entry.isIntersecting) {
+                html.style.setProperty("--header-height", "4rem");
+                html.style.setProperty("--font-size", "10px");
+            } else {
+                html.style.setProperty("--header-height", headerHeightInit);
+                html.style.setProperty("--font-size", fontSizeInit);
+            }
+        });
+    };
+
+    let headerObserver = new IntersectionObserver(obsCallback, options);
+    headerObserver.observe(headerTrigger);
+</script>
