Made header placeholder static to avoid the page jumping when it is just over a screen in height. Arguably makes a better experience in terms of the intial scroll as well, although looks slightly worse in my opinion.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -82,7 +82,7 @@
         transition: var(--transition-speed);
     }
     div.header-trigger {
-        height: var(--header-height);
+        height: 5.5rem;
         transition: var(--transition-speed);
     }
     @media (max-width: 400px) {
