--- a/src/components/Metadata.astro
+++ b/src/components/Metadata.astro
@@ -30,7 +30,9 @@ const fullDate =
                 let tagURL = `/blog/tags/${tag}`;
                 return (
                     <dd>
-                        <a href={tagURL}>{capitalise(tag)}</a>
+                        <a class="tag" href={tagURL}>
+                            {capitalise(tag)}
+                        </a>
                     </dd>
                 );
             })
@@ -51,6 +53,7 @@ const fullDate =
         flex-wrap: wrap;
         list-style: none;
         padding: 0;
+        align-items: center;
     }
     div {
         display: flex;
@@ -61,5 +64,9 @@ const fullDate =
         margin: 0;
         margin-left: 0.5rem;
         font-style: italic;
+    }
+    a.tag {
+        padding: 0.2rem 0.4rem;
+        margin: -0.2rem 0;
     }
 </style>
