--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -70,6 +70,21 @@ const pageDescription = description ?? frontmatter.description;
 			a {
 				font-size: 17px;
 			}
+			a.tag {
+				text-decoration: none;
+				color: black;
+				padding: 0.25rem 0.5rem;
+				border-radius: 5px;
+				font-size: 1.1rem;
+				font-weight: 500;
+				border: 1px solid black;
+				font-style: italic;
+				display: inline-block;
+			}
+			a.tag:focus,
+			a.tag:hover {
+				transform: scale(105%);
+			}
 			h2,
 			h3,
 			h4 {
