--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import NavCard from "../../components/NavCard.astro";
+import Tags from "../../components/Tags.astro";
 const title = "My Blog";
 const description = "A list of all my blog posts";
 const allBlogs = await Astro.glob("./*.mdx");
@@ -8,7 +9,8 @@ const nonDraftBlogs = allBlogs.filter((blog) => !blog.frontmatter.draft);
 ---
 
 <Layout title={title} description={description}>
-    <p>Here's a bunch of blog posts!</p>
+    <p>Choose a topic, or read them all!</p>
+    <Tags />
     <ul>
         {
             nonDraftBlogs.map((blog) => (
@@ -26,6 +28,12 @@ const nonDraftBlogs = allBlogs.filter((blog) => !blog.frontmatter.draft);
     ul {
         padding: 0;
         margin: 0;
+    }
+    ul.tagList {
+        display: flex;
+    }
+    ul.tagList li {
+        padding: 1rem;
     }
     a {
         text-decoration: none;
