--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -44,7 +44,7 @@
         transition: var(--transition-speed);
     }
     div.wrapper > a {
-        padding: 0.75em;
+        padding: 12px;
         background: var(--accent-gradient);
         border-radius: 100%;
     }
