--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,7 +67,7 @@ const pageDescription = description ?? frontmatter.description;
 					monospace;
 			}
 			p,
-			a {
+			header a {
 				font-size: 17px;
 			}
 			a.tag {
@@ -75,7 +75,6 @@ const pageDescription = description ?? frontmatter.description;
 				color: black;
 				padding: 0.25rem 0.5rem;
 				border-radius: 5px;
-				font-size: 1.1rem;
 				font-weight: 500;
 				border: 1px solid black;
 				font-style: italic;
@@ -83,7 +82,7 @@ const pageDescription = description ?? frontmatter.description;
 			}
 			a.tag:focus,
 			a.tag:hover {
-				transform: scale(105%);
+				transform: scale(106%);
 			}
 			h2,
 			h3,
