switched over default blog page to one with pagination setup. Should probabl implement pagination for tags too...

--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -4,20 +4,19 @@ import NavCard from "../../components/NavCard.astro";
 import Tags from "../../components/Tags.astro";
 const title = "My Blog";
 const description = "A list of all my blog posts";
-const allBlogs = await Astro.glob("./*.mdx");
-const nonDraftBlogs = allBlogs.filter((blog) => !blog.frontmatter.draft);
 
 export async function getStaticPaths({ paginate }) {
     const allBlogs = await Astro.glob("./*.mdx");
     const nonDraftBlogs = allBlogs.filter((blog) => !blog.frontmatter.draft).reverse();
 
-    return paginate(nonDraftBlogs, { pageSize: 1 });
+    return paginate(nonDraftBlogs, { pageSize: 10 });
 }
 const { page } = Astro.props;
 ---
 
 <Layout title={title} description={description}>
-    <p>{description}</p>
+    <p>Choose a topic, or read them all!</p>
+    <Tags />
     <ul>
         {
             page.data.map((blog) => (
@@ -30,9 +29,9 @@ const { page } = Astro.props;
             ))
         }
     </ul>
-    <p>Page {page.currentPage} of {page.lastPage}</p>
     <div>
     {page.url.prev ? <a href={page.url.prev}>Previous page</a> : null}
+    {page.lastPage > 1 ? <p>Page {page.currentPage} of {page.lastPage}</p> : null}
     {page.url.next ? <a href={page.url.next}>Next page</a></p> : null}
     </div>
 </Layout>
@@ -64,6 +63,14 @@ const { page } = Astro.props;
     }
     div {
         display: flex;
+        gap: 1rem;
+        align-items: center;
+        justify-content: center;
     }
-    div a { padding-left: 0;}
+    div a { 
+    padding: 0;
+    text-decoration: underline}
+    div p {
+        font-size: 16px;
+    }
 </style>
