--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/blog">Blog</a></li>
+                <li><a href="/blog/1">Blog</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
